--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -6,7 +6,7 @@
 <MudContainer MaxWidth="MaxWidth.False" Class="trymudblazor-index-appbar">
     <MudAppBar Color="Color.Transparent" Position="Position.Relative" Elevation="0">
         <div class="mudblazor-brand">
-            Try<span style="color: #594ae2;">MudBlazor</span>
+            Social<span style="color: #594ae2;">Artificial</span>
         </div>
         <MudAppBarSpacer />
         <MudButton Link="https://mudblazor.com/" Color="Color.Default" Size="Size.Large">MudBlazor</MudButton>
