--- a/Client/Shared/Footer.razor
+++ b/Client/Shared/Footer.razor
@@ -8,7 +8,7 @@
                 <div style="text-align:center">
                     <h1>Try</h1>
                     <h1 class="my-2">+</h1>
-                    <h1>MudBlazor</h1>
+                    <h1>SocialArtificial</h1>
                 </div>
             </MudItem>
             <MudItem xs="12" sm="3">
